tests/positive/issue3161/Stdlib/Data/String/Base.juvix
module Stdlib.Data.String.Base;

import Juvix.Builtin.V1.String open public;
import Stdlib.Data.List.Base open;
import Stdlib.Data.Fixity open;
