tests/negative/issue3161/Stdlib/Debug/Fail.juvix
module Stdlib.Debug.Fail;

import Stdlib.Data.String.Base open;
